Highlight India data

--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@ Highcharts.chart('container', {
             },    
         }
     },
-    series: [{visible: false},{visible: true, color: "red", zIndex:999},
-            {visible: false},{visible: false},{visible: false},
+    series: [{visible: true, color: "red", zIndex:999},
+            {visible: false},{visible: false},{visible: false},{visible: false},
             {visible: false},{visible: false},{visible: false},{visible: false},{visible: false},
             {visible: false},{visible: false},{visible: false},{visible: false},{visible: false},
             {visible: false},{visible: false},{visible: false},{visible: false},{visible: false}
