Update India Data

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ Highcharts.chart('container', {
     },
 
     subtitle: {
-        text: 'Source: github.com/CSSEGISandData/COVID-19'
+        text: 'Source: github.com/CSSEGISandData/COVID-19, mohfw.gov.in'
     },
 
     xAxis: {
