Add cache control

--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@ Highcharts.chart('container', {
 });
 
         </script>
-        <footer style="text-align: center; color: #666">
-            Disclaimer: India data is proactively updated from mohfw.gov.in. Hence latest data for other countries may be displayed flat.
+        <footer style="text-align: center; color: #ddd">
+            Disclaimer: India data is proactively updated from mohfw.gov.in. Hence, latest data for other countries may be displayed flat.
         </footer>
     </body>
 </html>
