--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <meta http-equiv="Cache-control" content="no-cache">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Highcharts Example</title>
+        <meta name="description" content="CoVid-19 India focussed data visualizations" />
+        <meta name="robots" content="all" />
+        <title>CoVid-19 India Focus</title>
 
         <style type="text/css">
 .highcharts-figure, .highcharts-data-table table {
