--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
     <script src="Highcharts/modules/export-data.js"></script>
     <script src="Highcharts/modules/accessibility.js"></script>
     <script src="Highcharts/themes/sunset.js"></script>
-    <div id="category">
+    <!-- <div id="category">
         <span class="category-item" id="category-item-1">India Vs Active Countries</span>
         <span class="category-item" id="category-item-2">Indian States</span>
-        <div>
+        <div> -->
     <figure class="highcharts-figure">
         <div id="container" style="height: 90vh; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"></div>
     </figure>
