--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
     <script src="Highcharts/modules/export-data.js"></script>
     <script src="Highcharts/modules/accessibility.js"></script>
     <script src="Highcharts/themes/sunset.js"></script>
+    <script src="//rawgithub.com/phpepe/highcharts-regression/master/highcharts-regression.js?8">
+
     <!-- <div id="category">
         <span class="category-item" id="category-item-1">India Vs Active Countries</span>
         <span class="category-item" id="category-item-2">Indian States</span>
