--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
     <script src="Highcharts/modules/exporting.js"></script>
     <script src="Highcharts/modules/export-data.js"></script>
     <script src="Highcharts/modules/accessibility.js"></script>
+    <script src="Highcharts/modules/histogram-bellcurve.js"></script>
     <script src="Highcharts/themes/sunset.js"></script>
-    <script src="https://rawgithub.com/phpepe/highcharts-regression/master/highcharts-regression.js?8">
 
     <!-- <div id="category">
         <span class="category-item" id="category-item-1">India Vs Active Countries</span>
