Add Indian states data

--- a/index.html
+++ b/index.html
@@ -63,11 +63,14 @@
     <figure class="highcharts-figure">
         <div id="container" style="height: 90vh; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"></div>
     </figure>
-
+    <figure class="highcharts-figure">
+        <div id="container2" style="height: 90vh; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"></div>
+    </figure>
     <script src="drawdata.js"></script>
 
     <script type="text/javascript">
         worldData();
+        indiaData();
     </script>
     <footer style="text-align: center; color: #ddd">
         Disclaimer: India data is proactively updated from mohfw.gov.in. Hence, latest data for other countries may be displayed flat.
