--- a/index.html
+++ b/index.html
@@ -89,5 +89,14 @@
     <footer style="text-align: center; color: #ddd">
         Disclaimer: India data is updated from mohfw.gov.in and public media for up-to-date information. Please consider mohfw.gov.in as the authentic source of information in case of ambiguity.
     </footer>
+    <script>
+         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+          ga('create', 'UA-41294744-3', 'auto');
+          ga('send', 'pageview');
+    </script>
 </body>
 </html>
