--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <div>
     <figure class="highcharts-figure">
         <div id="container" style="height: 70vh; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"></div>
-        <div id="gcontainer" style="hidden: true; height: 70vh; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);">
+        <div id="gcontainer" style="display: none; height: 70vh; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);">
             <iframe width="989.012" height="611.5071438473263" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTQdZKNxghqiYrxiqZ40vvV6UAta4eGSNzD0mdhLPrr9duD--HDcHilp17K3p1es7f2HlrgywavAoWk/pubchart?oid=1745826935&amp;format=interactive"></iframe>
         </div>
     </figure>
