--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta http-equiv="Cache-control" content="no-cache">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="CoVid-19 India focussed data visualizations" />
+    <meta http-equiv=“Pragma” content=”no-cache”>
+    <meta http-equiv="Cache-Control" content="max-age=3600"/>
     <meta name="robots" content="all" />
     <title>CoVid-19 India Focus</title>
 
