--- a/index.html
+++ b/index.html
@@ -76,19 +76,24 @@
     <script src="Highcharts/themes/sunset.js"></script>
     <h2 style="box-shadow: 0 0 5px #ddd; width: 100%; padding: 1vh 1vw; text-align: center">CoVid-19</h2>
     <div id="category">
+        <span class="category-item" id="category-item-flat">Flattening The Curve</span>
         <span class="category-item" id="category-item-all-countries">India Vs Active Countries</span>
         <span class="category-item" id="category-item-states">Indian States</span>
         <span class="category-item" id="category-item-india">India - Confirmed Vs Cured</span>
         <span class="category-item" id="category-item-delta">India - Daily Change & Trend</span>
     <div>
     <figure class="highcharts-figure">
-        <div id="container" style="height: 70vh; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"></div>
-        <div id="gcontainer" style="height: 70vh; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);">
+        <div class="display-chart" id="container" style="height: 70vh; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"></div>
+        <div class="display-chart" id="gcontainer" style="height: 70vh; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);">
             <iframe width="989.012" height="611.5071438473263" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTQdZKNxghqiYrxiqZ40vvV6UAta4eGSNzD0mdhLPrr9duD--HDcHilp17K3p1es7f2HlrgywavAoWk/pubchart?oid=1745826935&amp;format=interactive"></iframe>
         </div>
-        <div id="gcontainer2" style="height: 70vh; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);">
+        <div class="display-chart" id="gcontainer2" style="height: 70vh; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);">
             <iframe width="911.1743668926973" height="563.152800650673" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTQdZKNxghqiYrxiqZ40vvV6UAta4eGSNzD0mdhLPrr9duD--HDcHilp17K3p1es7f2HlrgywavAoWk/pubchart?oid=973396275&amp;format=interactive"></iframe>
         </div>
+        <div class="display-chart" id="gcontainer3" style="height: 70vh; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);">
+            <iframe width="911.1743668926973" height="563.152800650673" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTQdZKNxghqiYrxiqZ40vvV6UAta4eGSNzD0mdhLPrr9duD--HDcHilp17K3p1es7f2HlrgywavAoWk/pubchart?oid=1537483149&amp;format=interactive"></iframe>
+        </div>
+        
     </figure>
     
     <script src="drawdata.js"></script>
